--- a/www/templates/Urban Sunrise/common.less
+++ b/www/templates/Urban Sunrise/common.less
@@ -1,5 +1,12 @@
 @import "skin_variables.lsi";
 
+
+@font-face {
+  font-family: 'Noto Sans Symbols2 Regular';
+  src: url('/_fonts/NotoSansSymbols2-Regular.ttf');
+}
+
+
 html {
   font-family: @FontMain;
   font-size: @FontSize;
